force-app/main/default/objects/Forrester_SHIR_OUTSIDE_MATTER_VIEW__x/Forrester_SHIR_OUTSIDE_MATTER_VIEW__x.object-meta.xml
<CustomObject>
    <description>Forrester_SHIR_OUTSIDE_MATTER_VIEW</description>
    <externalDataSource>Forrester</externalDataSource>
    <externalName>Forrester_SHIR_OUTSIDE_MATTER_VIEW</externalName>
    <label>Outside Matter</label>
    <pluralLabel>Outside Matters</pluralLabel>
</CustomObject>