force-app/main/default/objects/Forrester_SHIR_OUTSIDE_MATTER_VIEW__x/fields/CLOSED_DATE__c.field-meta.xml
<CustomField>
    <fullName>CLOSED_DATE__c</fullName>
    <description>CLOSED_DATE</description>
    <externalDeveloperName>CLOSED_DATE</externalDeveloperName>
    <label>Date Closed</label>
    <type>Date</type>
</CustomField>