force-app/main/default/objects/Forrester_SHIR_OUTSIDE_MATTER_VIEW__x/fields/DESCRIPTION__c.field-meta.xml
<CustomField>
    <fullName>DESCRIPTION__c</fullName>
    <description>DESCRIPTION</description>
    <externalDeveloperName>DESCRIPTION</externalDeveloperName>
    <label>Details</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>