force-app/main/default/objects/Forrester_SHIR_OUTSIDE_MATTER_VIEW__x/fields/INTENDED_RESERVE__c.field-meta.xml
<CustomField>
    <fullName>INTENDED_RESERVE__c</fullName>
    <description>INTENDED_RESERVE</description>
    <externalDeveloperName>INTENDED_RESERVE</externalDeveloperName>
    <label>Intended Reserve</label>
    <precision>15</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>