force-app/main/default/objects/Forrester_SHIR_OUTSIDE_MATTER_VIEW__x/fields/LAST_CRDR_DATE__c.field-meta.xml
<CustomField>
    <fullName>LAST_CRDR_DATE__c</fullName>
    <description>LAST_CRDR_DATE</description>
    <externalDeveloperName>LAST_CRDR_DATE</externalDeveloperName>
    <label>Last CRDR Date</label>
    <type>Date</type>
</CustomField>