force-app/main/default/objects/Forrester_SHIR_OUTSIDE_MATTER_VIEW__x/fields/MATTER_TYPE__c.field-meta.xml
<CustomField>
    <fullName>MATTER_TYPE__c</fullName>
    <description>MATTER_TYPE</description>
    <externalDeveloperName>MATTER_TYPE</externalDeveloperName>
    <label>Type</label>
    <length>20</length>
    <type>Text</type>
</CustomField>