force-app/main/default/objects/Forrester_SHIR_OUTSIDE_MATTER_VIEW__x/fields/OPENED_DATE__c.field-meta.xml
<CustomField>
    <fullName>OPENED_DATE__c</fullName>
    <description>OPENED_DATE</description>
    <externalDeveloperName>OPENED_DATE</externalDeveloperName>
    <label>Date Opened</label>
    <type>Date</type>
</CustomField>